--- a/Python files/Kaggle/Home Credit Default Risk/Learning.ipynb
+++ b/Python files/Kaggle/Home Credit Default Risk/Learning.ipynb
@@ -1706,11 +1706,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Get age data"
+   ]
   },
   {
    "cell_type": "code",
