--- a/Python files/Kaggle/Elo Merchant Category Recommendation/test.ipynb
+++ b/Python files/Kaggle/Elo Merchant Category Recommendation/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv(r\"..\\..\\Kaggle\\Elo\\data\\test.csv\", header = \"infer\", sep = \",\")\n",
+    "DATA_PATH = r\"../../../../../Data/Elo Merchant Category Recommendation/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv(DATA_PATH + \"test.csv\", header = \"infer\", sep = \",\")\n",
     "#(123623, 5)\n",
     "# first_active_month, card_id, feature_1, feature_2, feature_3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +72,7 @@
        "Name: feature_3, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +132,7 @@
        "11578                NaN  C_ID_c27b4f80f7          5          2          1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test1.to_csv(r\"..\\..\\Kaggle\\Elo\\data\\test1.csv\")"
+    "test1.to_csv(DATA_PATH + \"test1.csv\")"
    ]
   },
   {
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,11 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test2.to_csv(r\"..\\..\\Kaggle\\Elo\\data\\test2.csv\")"
+    "test2.to_csv(DATA_PATH + \"test2.csv\")"
    ]
   },
   {
@@ -253,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +322,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,11 +369,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test3.to_csv(r\"..\\..\\Kaggle\\Elo\\data\\test3.csv\")"
+    "test3.to_csv(DATA_PATH + \"test3.csv\")"
    ]
   },
   {
