--- a/Python files/Kaggle/Elo Merchant Category Recommendation/modeling1.ipynb
+++ b/Python files/Kaggle/Elo Merchant Category Recommendation/modeling1.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lightgbm as lgb\n",
+    "import lightgbm\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train1 = pd.read_csv(r\"..\\..\\Kaggle\\Elo\\data\\train1.csv\", header = \"infer\", sep = \",\")"
+    "DATA_PATH = r\"../../../../../Data/Elo Merchant Category Recommendation/\""
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test1 = pd.read_csv(r\"..\\..\\Kaggle\\Elo\\data\\test1.csv\", header = \"infer\", sep = \",\")"
+    "train1 = pd.read_csv(DATA_PATH + \"train1.csv\", header = \"infer\", sep = \",\")"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test2 = pd.read_csv(r\"..\\..\\Kaggle\\Elo\\data\\test2.csv\", header = \"infer\", sep = \",\")"
+    "test1 = pd.read_csv(DATA_PATH + \"test1.csv\", header = \"infer\", sep = \",\")"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test3 = pd.read_csv(r\"..\\..\\Kaggle\\Elo\\data\\test3.csv\", header = \"infer\", sep = \",\")"
+    "test2 = pd.read_csv(DATA_PATH + \"test2.csv\", header = \"infer\", sep = \",\")"
    ]
   },
   {
@@ -53,12 +53,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test3 = pd.read_csv(DATA_PATH + \"test3.csv\", header = \"infer\", sep = \",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "part = np.random.rand(len(train1))<0.7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,25 +105,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgbm_train = lightgbm.Dataset(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lgb_train = lgb.Dataset(x_train,y_train)"
+    "lgbm_eval = lightgbm.Dataset(x_valid,y_valid)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgb_eval = lgb.Dataset(x_valid,y_valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,42 +142,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\tvalid_0's l1: 1.58315\tvalid_0's l2: 14.5706\n",
+      "[1]\tvalid_0's l2: 15.3141\tvalid_0's l1: 1.60502\n",
       "Training until validation scores don't improve for 5 rounds.\n",
-      "[2]\tvalid_0's l1: 1.5832\tvalid_0's l2: 14.5666\n",
-      "[3]\tvalid_0's l1: 1.5831\tvalid_0's l2: 14.5614\n",
-      "[4]\tvalid_0's l1: 1.58328\tvalid_0's l2: 14.5582\n",
-      "[5]\tvalid_0's l1: 1.58327\tvalid_0's l2: 14.5535\n",
-      "[6]\tvalid_0's l1: 1.58326\tvalid_0's l2: 14.5496\n",
-      "[7]\tvalid_0's l1: 1.58331\tvalid_0's l2: 14.5459\n",
-      "[8]\tvalid_0's l1: 1.58348\tvalid_0's l2: 14.5428\n",
+      "[2]\tvalid_0's l2: 15.3103\tvalid_0's l1: 1.60493\n",
+      "[3]\tvalid_0's l2: 15.3042\tvalid_0's l1: 1.60478\n",
+      "[4]\tvalid_0's l2: 15.3013\tvalid_0's l1: 1.60483\n",
+      "[5]\tvalid_0's l2: 15.297\tvalid_0's l1: 1.60484\n",
+      "[6]\tvalid_0's l2: 15.2925\tvalid_0's l1: 1.60496\n",
+      "[7]\tvalid_0's l2: 15.2881\tvalid_0's l1: 1.6052\n",
+      "[8]\tvalid_0's l2: 15.2847\tvalid_0's l1: 1.60544\n",
       "Early stopping, best iteration is:\n",
-      "[3]\tvalid_0's l1: 1.5831\tvalid_0's l2: 14.5614\n"
+      "[3]\tvalid_0's l2: 15.3042\tvalid_0's l1: 1.60478\n"
      ]
     }
    ],
    "source": [
-    "gbm = lgb.train(params,\n",
-    "                lgb_train,\n",
+    "gbm = lightgbm.train(params,\n",
+    "                lgbm_train,\n",
     "                num_boost_round=20,\n",
-    "                valid_sets=lgb_eval,\n",
+    "                valid_sets=lgbm_eval,\n",
     "                early_stopping_rounds=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred1 = gbm.predict(x_test1,num_iteration=gbm.best_iteration)"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred2 = gbm.predict(x_test2,num_iteration=gbm.best_iteration)"
+    "y_pred1 = gbm.predict(x_test1,num_iteration=gbm.best_iteration)"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred3 = gbm.predict(x_test3,num_iteration=gbm.best_iteration)"
+    "y_pred2 = gbm.predict(x_test2,num_iteration=gbm.best_iteration)"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result1 = pd.concat([test_card_id1,pd.Series(y_pred1)],axis = 1,keys = [\"card_id\",\"target\"])"
+    "y_pred3 = gbm.predict(x_test3,num_iteration=gbm.best_iteration)"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result2 = pd.concat([test_card_id2,pd.Series(y_pred2)],axis = 1,keys = [\"card_id\",\"target\"])"
+    "result1 = pd.concat([test_card_id1,pd.Series(y_pred1)],axis = 1,keys = [\"card_id\",\"target\"])"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result3 = pd.concat([test_card_id3,pd.Series(y_pred3)],axis = 1,keys = [\"card_id\",\"target\"])"
+    "result2 = pd.concat([test_card_id2,pd.Series(y_pred2)],axis = 1,keys = [\"card_id\",\"target\"])"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result1.to_csv(r'F:\\Kaggle\\Elo\\data\\result1.csv', header='infer', sep=',', index=False) #3.929 place - 398"
+    "result3 = pd.concat([test_card_id3,pd.Series(y_pred3)],axis = 1,keys = [\"card_id\",\"target\"])"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result2.to_csv(r'F:\\Kaggle\\Elo\\data\\result2.csv', header='infer', sep=',', index=False) #3.929 place - 398"
+    "result1.to_csv(DATA_PATH + 'result1.csv', header='infer', sep=',', index=False) #3.929 place - 398"
    ]
   },
   {
@@ -240,7 +240,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result3.to_csv(r'F:\\Kaggle\\Elo\\data\\result3.csv', header='infer', sep=',', index=False) #3.929 place - 398"
+    "result2.to_csv(DATA_PATH + 'result2.csv', header='infer', sep=',', index=False) #3.929 place - 398"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result3.to_csv(DATA_PATH + 'result3.csv', header='infer', sep=',', index=False) #3.929 place - 398"
    ]
   },
   {
