--- a/Python files/Kaggle/Elo Merchant Category Recommendation/Elo.ipynb
+++ b/Python files/Kaggle/Elo Merchant Category Recommendation/Elo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4 -0.159749  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "4            2015-12  C_ID_2b5e3df5c2          5          1          1"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "4 -0.159749  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "4 -0.159749  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,16 +490,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True, ...,  True, False,  True])"
+       "array([False,  True,  True, ...,  True,  True,  True], dtype=bool)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "4             16770.0  C_ID_2b5e3df5c2          5          1          1"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,23 +640,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3     0.142495\n",
+       "0    -0.820283\n",
+       "10   -1.029562\n",
+       "13    0.093633\n",
        "14    1.597750\n",
-       "22    0.464404\n",
-       "24   -0.084951\n",
-       "28    0.727093\n",
-       "33    1.611887\n",
-       "35    1.233601\n",
+       "16    1.132236\n",
+       "17    0.318062\n",
+       "21    4.747602\n",
        "Name: target, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,25 +704,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\tvalid_0's l1: 1.58178\tvalid_0's l2: 14.7442\n",
+      "[1]\tvalid_0's l2: 14.7499\tvalid_0's l1: 1.58339\n",
       "Training until validation scores don't improve for 5 rounds.\n",
-      "[2]\tvalid_0's l1: 1.58185\tvalid_0's l2: 14.743\n",
-      "[3]\tvalid_0's l1: 1.58176\tvalid_0's l2: 14.7365\n",
-      "[4]\tvalid_0's l1: 1.58163\tvalid_0's l2: 14.7316\n",
-      "[5]\tvalid_0's l1: 1.58174\tvalid_0's l2: 14.7307\n",
-      "[6]\tvalid_0's l1: 1.58183\tvalid_0's l2: 14.7262\n",
-      "[7]\tvalid_0's l1: 1.58201\tvalid_0's l2: 14.7222\n",
-      "[8]\tvalid_0's l1: 1.58215\tvalid_0's l2: 14.7216\n",
-      "[9]\tvalid_0's l1: 1.5823\tvalid_0's l2: 14.721\n",
+      "[2]\tvalid_0's l2: 14.7488\tvalid_0's l1: 1.58348\n",
+      "[3]\tvalid_0's l2: 14.7422\tvalid_0's l1: 1.58337\n",
+      "[4]\tvalid_0's l2: 14.7371\tvalid_0's l1: 1.58336\n",
+      "[5]\tvalid_0's l2: 14.7363\tvalid_0's l1: 1.58347\n",
+      "[6]\tvalid_0's l2: 14.7315\tvalid_0's l1: 1.58362\n",
+      "[7]\tvalid_0's l2: 14.727\tvalid_0's l1: 1.58383\n",
+      "[8]\tvalid_0's l2: 14.7264\tvalid_0's l1: 1.58403\n",
+      "[9]\tvalid_0's l2: 14.7258\tvalid_0's l1: 1.58422\n",
       "Early stopping, best iteration is:\n",
-      "[4]\tvalid_0's l1: 1.58163\tvalid_0's l2: 14.7316\n"
+      "[4]\tvalid_0's l2: 14.7371\tvalid_0's l1: 1.58336\n"
      ]
     }
    ],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,77 +745,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        -0.413305\n",
-       "1        -0.450501\n",
-       "2        -0.376224\n",
-       "3        -0.340568\n",
-       "4        -0.454566\n",
-       "5        -0.376224\n",
-       "6        -0.340018\n",
-       "7        -0.396914\n",
-       "8        -0.379795\n",
-       "9        -0.454566\n",
-       "10       -0.400783\n",
-       "11       -0.335036\n",
-       "12       -0.394124\n",
-       "13       -0.456045\n",
-       "14       -0.454566\n",
-       "15       -0.336113\n",
-       "16       -0.341437\n",
-       "17       -0.348164\n",
-       "18       -0.347451\n",
-       "19       -0.465565\n",
-       "20       -0.434664\n",
-       "21       -0.397598\n",
-       "22       -0.456045\n",
-       "23       -0.356060\n",
-       "24       -0.394124\n",
-       "25       -0.588846\n",
-       "26       -0.395386\n",
-       "27       -0.397929\n",
-       "28       -0.361643\n",
-       "29       -0.397929\n",
+       "0        -0.446822\n",
+       "1        -0.448329\n",
+       "2        -0.366807\n",
+       "3        -0.347010\n",
+       "4        -0.446596\n",
+       "5        -0.375431\n",
+       "6        -0.345518\n",
+       "7        -0.408386\n",
+       "8        -0.395413\n",
+       "9        -0.462577\n",
+       "10       -0.425286\n",
+       "11       -0.341917\n",
+       "12       -0.401809\n",
+       "13       -0.438452\n",
+       "14       -0.449049\n",
+       "15       -0.344041\n",
+       "16       -0.350055\n",
+       "17       -0.359134\n",
+       "18       -0.355673\n",
+       "19       -0.459937\n",
+       "20       -0.444397\n",
+       "21       -0.391109\n",
+       "22       -0.438452\n",
+       "23       -0.366807\n",
+       "24       -0.401809\n",
+       "25       -0.430209\n",
+       "26       -0.400463\n",
+       "27       -0.409521\n",
+       "28       -0.384058\n",
+       "29       -0.409521\n",
        "            ...   \n",
-       "123593   -0.394124\n",
-       "123594   -0.362906\n",
-       "123595   -0.333774\n",
-       "123596   -0.397929\n",
-       "123597   -0.397929\n",
-       "123598   -0.339574\n",
-       "123599   -0.343818\n",
-       "123600   -0.475272\n",
-       "123601   -0.348273\n",
-       "123602   -0.457950\n",
-       "123603   -0.331404\n",
-       "123604   -0.340568\n",
-       "123605   -0.388434\n",
-       "123606   -0.376224\n",
-       "123607   -0.335036\n",
-       "123608   -0.397929\n",
-       "123609   -0.437207\n",
-       "123610   -0.413305\n",
-       "123611   -0.418017\n",
-       "123612   -0.395386\n",
-       "123613   -0.434664\n",
-       "123614   -0.400783\n",
-       "123615   -0.469199\n",
-       "123616   -0.396605\n",
-       "123617   -0.395386\n",
-       "123618   -0.333774\n",
-       "123619   -0.339562\n",
-       "123620   -0.443799\n",
-       "123621   -0.397598\n",
-       "123622   -0.436939\n",
+       "123593   -0.401809\n",
+       "123594   -0.355712\n",
+       "123595   -0.343263\n",
+       "123596   -0.409521\n",
+       "123597   -0.409521\n",
+       "123598   -0.348819\n",
+       "123599   -0.357835\n",
+       "123600   -0.445041\n",
+       "123601   -0.360805\n",
+       "123602   -0.441654\n",
+       "123603   -0.338519\n",
+       "123604   -0.347010\n",
+       "123605   -0.406813\n",
+       "123606   -0.375431\n",
+       "123607   -0.341917\n",
+       "123608   -0.409521\n",
+       "123609   -0.449303\n",
+       "123610   -0.384541\n",
+       "123611   -0.436624\n",
+       "123612   -0.400463\n",
+       "123613   -0.444228\n",
+       "123614   -0.425286\n",
+       "123615   -0.453314\n",
+       "123616   -0.417113\n",
+       "123617   -0.400463\n",
+       "123618   -0.343263\n",
+       "123619   -0.354036\n",
+       "123620   -0.449049\n",
+       "123621   -0.391109\n",
+       "123622   -0.439192\n",
        "Length: 123623, dtype: float64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "Index(['card_id', 'target'], dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
