--- a/Python files/Other/Forex 2.ipynb
+++ b/Python files/Other/Forex 2.ipynb
@@ -374,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x23043563e48>"
+       "<matplotlib.collections.PathCollection at 0x1df87c42be0>"
       ]
      },
      "execution_count": 9,
@@ -406,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x230435cd438>"
+       "<matplotlib.collections.PathCollection at 0x1df87c7e668>"
       ]
      },
      "execution_count": 10,
